# talking-shop-with-the-big-g

./: .gitignore
adk-voice-agent/: .gitignore  README.md  get_started_with_chirp_3_hd_voices.ipynb  pyproject.toml
adk-voice-agent/app/: main.py
adk-voice-agent/app/google_search_agent/: agent.py
adk-voice-agent/app/static/: index.html
adk-voice-agent/app/static/css/: style.css
adk-voice-agent/app/static/js/: app.js  audio-player.js  waveform-visualizer.js
google-adk-introduction-ts/: README.md  bun-node-prompt-test.ts
google-adk-introduction-ts/adk-foundation/: package.json  slides.md
google-adk-introduction-ts/adk-foundation/pages/: ADK_ADVANCED_CAPABILITIES.md  STREAMING_GUIDE.md
google-adk-introduction-ts/demo/: README.md  agent.ts  env.example  package-lock.json  package.json  server.ts  simulate-conversation.ts  simulate-server-conversation.ts  tsconfig.json
google-adk-introduction-ts/demo/extra/: EXERCISES.md  MULTITURN_DEMO.md
google-adk-introduction-ts/demo/tutorial/: guide.md
google-adk-introduction-ts/reading/: GOLD_STANDARD_ADK_GUIDE.md  MULTITURN_GUIDE.md
multi_agent_weather/: README.md
multi_agent_weather/weather_agent/: agent.py
